git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1327 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/bank_account_statement.html.haml
+++ b/app/views/accountancy/bank_account_statement.html.haml
@@ -5,5 +5,5 @@
 =evalue(@bank_account_statement.bank_account, :name)
 =evalue(@bank_account_statement, :credit)
 =evalue(@bank_account_statement, :debit)
-=dyta(:statements_entries)
+=dyta(:statement_entries)
 
