Add some user preference support
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1329 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/shared/_menu_index.html.haml
+++ b/app/views/shared/_menu_index.html.haml
@@ -5,6 +5,6 @@
   - if display
     %div{:class=>"menu"+(list[:class].nil? ? "" : " "+list[:class].to_s)}
       %h2=t("views.#{self.controller.controller_name}.index.#{list[:name].to_s}")
-      %ul
+      %ul{:id=>"menu_#{self.controller.controller_name}_#{list[:name]}_actions"}
         - for action in list[:list]
           =li_link_to t("views.#{self.controller.controller_name}.index.#{action[:name].to_s}"), action[:url]||{:action=>action[:name]}
