--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -7,7 +7,7 @@ fieldset nobr { margin: 0 8px; vertical-align: middle; }
 td, th, a, p, input, textarea, select, div { font-size:13px;}
 a:link, a:visited, a:focus { color:#00C; }
 a:hover { color: #000; }
-input[type="submit"] { padding:2px 8px; }
+input[type="submit"] { padding: 1px 5px; }
 /*
 .stocks { padding: 5px 0 15px 0; }
 .paymentpart{ text-align:center; padding: 5px 0 5px 0; }
@@ -58,7 +58,8 @@ table#master > tbody > tr > td > .column { height: 300px; overflow: auto; }
 
 #side { width: 192px; padding: 0 0 8px 8px; background: #c9d7f1; overflow: auto;  border-top: 1px solid #95b0e4;}
 #side .menu { background: #FFF; padding:0px; margin:8px 0px 0px; border: 2px solid #95b0e4; }
-#side .menu h2 { font-size : 13px; color: #012; padding: 2px 4px; background: #95b0e4; text-align: center; }
+#side .menu h2 { font-size : 13px; color: #012; padding: 2px 4px 2px 20px; background: #95b0e4 url(../images/buttons/down4.png) no-repeat left center; text-align: left; cursor: pointer; }
+#side .menu h2.closed { background: #95b0e4 url(../images/buttons/next4.png) no-repeat left center; }
 #side .menu ul { padding: 0 0px 0 0px; }
 #side .menu ul li:first-child { border-top: none; }
 #side .menu li { list-style-type: none; background: url(../images/template/round.png) no-repeat center left; border-top: 1px dotted #95b0e4; }
@@ -96,7 +97,7 @@ table#master > tbody > tr > td > .column { height: 300px; overflow: auto; }
 
 .help-link { float:right; padding: 8px 4px;}
 .help-link a:link { padding: 4px; font-size: 13px; }
-#help .help-link a:link { color: #750; background: #e9e9a8; }
+#help .help-link a:link { color: #750; }
 .help-link a:hover { color:black; }
 #help-open a { background: url(../images/buttons/help.png) no-repeat scroll left center; padding-left:20px; }
 #help-close a { background: url(../images/buttons/close.png) no-repeat scroll left center; padding-left:20px; }
