--- a/app/views/company/_listing_node.html.haml
+++ b/app/views/company/_listing_node.html.haml
@@ -1,12 +1,20 @@
 .branch{:class=>(listing_node.reflection? ? " reflection" : " column")}
   .shift
   .tools
+    -unless listing_node.reflection?
+      =check_box_tag(:listing_node, :exportable, listing_node.exportable, :onclick=>remote_function(:url=>{:action=>:listing_node_update, :id=>listing_node.id, :type=>listing_node.exportable ? "hide" : "show"}) )
     -unless listing_node.root?
       =link_to_remote("Supprimer", :url=>{:action=>:listing_node_delete, :id=>listing_node.id}, :update=>listing_node.parent.key)
   .item
     .content
-      %span{:onclick=>"toggleElement('#{listing_node.key}')"}=listing_node.label
-      %span.attribute=listing_node.name
+      %table
+        %tr
+          -if listing_node.reflection?
+            %td{:onclick=>"toggleElement('#{listing_node.key}')"}=listing_node.label
+          -else
+            %td{:id=>"#{listing_node.key}_label"}=render(:partial=>"listing_node_column_label", :object=>listing_node)
+            %td{:id=>"#{listing_node.key}_comparator"}=render(:partial=>"listing_node_comparison", :object=>listing_node)
+            %td=listing_node.name
       =#puts listing_node.parent.model.inspect if listing_node.parent
 
 -if listing_node.reflection?
