--- a/app/views/company/listing_update.html.haml
+++ b/app/views/company/listing_update.html.haml
@@ -3,8 +3,9 @@
     -f.error :listing
     -f.title :subtitle
     -f.field :listing, :name
-    -f.field :listing, :root_model, :choices=>Company.reflections.select{|k,v| v.macro==:has_many}.collect{|a| [::I18n.t("activerecord.models.#{a[0].to_s.singularize}"), a[0].to_s.singularize]}.sort{|a,b| a[0].ascii<=>b[0].ascii}
+    -#f.field :listing, :root_model, :choices=>Company.reflections.select{|k,v| v.macro==:has_many}.collect{|a| [::I18n.t("activerecord.models.#{a[0].to_s.singularize}"), a[0].to_s.singularize]}.sort{|a,b| a[0].ascii<=>b[0].ascii}
     -f.field :listing, :query, :field=>:textarea, :options=>{:cols=>80, :rows=>12}
+    -f.field :listing, :conditions, :field=>:textarea
     -f.field :listing, :comment, :field=>:textarea
 
   .actions
@@ -14,6 +15,19 @@
   -f.title :data_to_extract
 
 =render :partial=>"listing_node", :object=>@listing.root
+
+:javascript
+  function display_comparison(ln) {
+    if($(ln+"_status").checked) {
+     
+      $(ln+"_comparison").show(); }
+    else {
+      $(ln+"_comparison").hide();
+     
+    }
+  }
+
+
 
 .actions 
   =link_to tg(:previous), :action=>:listings
