--- a/app/views/management/_sale_order_line_form.html.haml
+++ b/app/views/management/_sale_order_line_form.html.haml
@@ -4,9 +4,11 @@
   - f.error :sale_order_line
   - f.error :subscription
   - f.title :infos
-  -# f.field :sale_order_line, :price_id, :choices=>:price, :new=>{:action=>:price_create, :mode=>:sale_orders}
   -#f.field :sale_order_line, :price_id, :choices=>Price.find(:all,:conditions=>{:company_id=>@current_company.id,:entity_id=>@current_company.entity_id, :active=>true, :category_id=>@sale_order.client.category.id}).collect{|x| [x.product.name+" "+x.amount.to_s+" "+x.currency.code, x.id]}, :new=>{:action=>:price_create, :mode=>:sale_orders}
   -f.field :sale_order_line, :price_id, :choices=>@current_company.available_prices.collect{|x| [x.label, x.id]}, :new=>{:action=>:price_create, :mode=>:sale_orders}
+#stocks=render :partial=>"sale_order_line_stocks"
+
+=formalize do |f|
   - f.field :sale_order_line, :location_id, :choices=>@stock_locations.collect{|x| [x.name, x.id]} if @stock_locations.size > 1
   - f.field :sale_order_line, :quantity
   - f.field :sale_order_line, :annotation, :field=>:textarea
@@ -24,5 +26,6 @@
 
 =observe_field("sale_order_line_price_id", :url=>{:action => :subscription_find}, :frequency => 0.25, :with=>"sale_order_line_price_id")
 
+=observe_field("sale_order_line_price_id", :url=>{:action => :sale_order_line_stocks}, :frequency => 0.25, :with=>"sale_order_line_price_id")
   
  
