--- a/app/views/company/listing_update.html.haml
+++ b/app/views/company/listing_update.html.haml
@@ -1,11 +1,14 @@
+=toolbar do
+  -link :listing_extract, :id=>@listing.id
+
 -form_tag do
   =formalize do |f|
     -f.error :listing
     -f.title :subtitle
     -f.field :listing, :name
     -#f.field :listing, :root_model, :choices=>Company.reflections.select{|k,v| v.macro==:has_many}.collect{|a| [::I18n.t("activerecord.models.#{a[0].to_s.singularize}"), a[0].to_s.singularize]}.sort{|a,b| a[0].ascii<=>b[0].ascii}
-    -f.field :listing, :query, :field=>:textarea, :options=>{:cols=>80, :rows=>12}
-    -f.field :listing, :conditions, :field=>:textarea
+    -#f.field :listing, :query, :field=>:textarea, :options=>{:cols=>80, :rows=>12}
+    -f.field :listing, :conditions, :field=>:textarea, :options=>{:cols=>80}
     -f.field :listing, :comment, :field=>:textarea
 
   .actions
@@ -27,7 +30,7 @@
     }
   }
 
-
-
 .actions 
   =link_to tg(:previous), :action=>:listings
+
+%p{:style=>'color: #808080;'}=tc(:query)+" "+@listing.query.to_s
