--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -335,6 +335,7 @@ input.dyli { background: #FFF url(../images/buttons/previous2.png) right center 
 /*.branch .icon  { width: 16px; height:16px; background: url(../images/buttons/increment.png) no-repeat center left; float: left; margin: 2px 0 0;}*/
 .branch .item  { padding: 0 0 0 16px; background: url(../images/buttons/increment.png) no-repeat center left;  margin: 0 0 0 10px;   }
 .branch .item .content { border-bottom:1px dotted #79F; padding: 2px 4px; }
+.branch .item .content .infos {font-style: italic; padding: 0  0 0 100%;}
 .branch .item .attribute { color: #888; font-style: italic; }
 .branch.reflection .item { color: #008; background: url(../images/buttons/table.png) no-repeat center left; }
 .branch.column     .item { background: url(../images/buttons/complete.png) no-repeat center left; }
