unpaid sale orders extract, fixes bug on entries...
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1335 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/entries.html.haml
+++ b/app/views/accountancy/entries.html.haml
@@ -23,10 +23,11 @@
         %th
       %tr
         %td=text_field :record, :number, {:size=>5}
-        %td=text_field_tag 'record[created_on]', I18n.localize(@record.created_on)
-        %td=text_field_tag 'record[printed_on]', I18n.localize(@record.printed_on)
+        %td=text_field_tag 'record[created_on]', I18n.localize(@record.created_on), :size=>10
+        %td=text_field_tag 'record[printed_on]', I18n.localize(@record.printed_on), :size=>10
         %td=text_field :entry,  :name, {:size=>16}
-        %td=dyli_tag 'entry[account_id]', :account, :resize=>true 
+        -#%td=#dyli_tag 'entry[account_id]', :account, :resize=>true 
+        %td=text_field_with_auto_complete(:entry, :account)
         %td=text_field :entry, :currency_debit, {:size=>7}
         %td=text_field :entry, :currency_credit, {:size=>7}
         %td=submit_tag tc(:entry_validate) 
