--- a/app/views/relations/entity.html.haml
+++ b/app/views/relations/entity.html.haml
@@ -23,8 +23,8 @@
         =evalue @entity, :vat_number unless @entity.vat_number.blank?
         =evalue @entity, :vat_submissive
         =evalue @entity, :reflation_submissive 
-        =evalue @entity, :max_reduction_rate
-        =evalue @entity, :discount_rate unless @entity.discount_rate.blank?
+        =#evalue @entity, :max_reduction_rate
+        =#evalue @entity, :discount_rate unless @entity.discount_rate.blank?
         =evalue @entity, :reduction_rate unless @entity.reduction_rate.blank?
         =evalue @entity, :authorized_payments_count unless @entity.authorized_payments_count.blank?
         =#evalue @entity, :deliveries_conditions unless @entity.deliveries_conditions.blank?
