Fixes tracking support migration
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1342 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/company/_listing_reflection.html.haml
+++ b/app/views/company/_listing_reflection.html.haml
@@ -1,4 +1,4 @@
-=render(:partial=>"listing_node", :collection=>listing_reflection.children) 
+=render(:partial=>"listing_node", :collection=>listing_reflection.children.find(:all, :order=>:position)) 
 .branch
   .shift
   .icon
