--- a/app/views/production/_shape_form.html.haml
+++ b/app/views/production/_shape_form.html.haml
@@ -2,8 +2,10 @@
   - f.title :infos
   - f.error :shape
   - f.field :shape, :name
-  - f.field :shape, :polygon
-  - f.field :shape, :master
+  - f.field :shape, :number
+  -#f.field :shape, :polygon
+  - f.field :shape, :area
+  -#f.field :shape, :master
 = formalize(:id=>:master_select) do |f|
   -# f.field :shape, :parent_id, :choices=>@current_company.shapes.collect{|x| [x.name+" ( "+x.polygon+" )", x.id]}
 = formalize do |f|
