Upgrade unit system
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1344 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/company/index.html.haml
+++ b/app/views/company/index.html.haml
@@ -12,3 +12,5 @@
   %ul
     -for controller in [:relations, :accountancy, :management, :resources, :production]
       =li_link_to tc(controller), :controller=>controller, :action=>:index
+
+=h Unit.normalize("kg.m3 15,45.s-1 s").inspect
