--- a/app/views/company/_unit_form.html.haml
+++ b/app/views/company/_unit_form.html.haml
@@ -1,5 +1,7 @@
 =formalize do |f|
   -f.error :unit
-  -f.field :unit, :name
   -f.field :unit, :label
-  -f.field :unit, :expression
+  -f.field :unit, :name
+  -f.field :unit, :coefficient
+  -f.field :unit, :base
+  -f.field :unit, :start
