--- a/app/views/company/index.html.haml
+++ b/app/views/company/index.html.haml
@@ -13,4 +13,4 @@
     -for controller in [:relations, :accountancy, :management, :resources, :production]
       =li_link_to tc(controller), :controller=>controller, :action=>:index
 
-=h Unit.normalize("kg.m3 15,45.s-1 s").inspect
+=h Unit.normalize("kg.m3.s-1 s").inspect
