Change translation of shape_operation in french and revise tracking migration
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1347 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/production/_shape_operation_form.html.haml
+++ b/app/views/production/_shape_operation_form.html.haml
@@ -15,3 +15,6 @@
   - f.title :duration
   - f.field :shape_operation, :hour_duration
   - f.field :shape_operation, :min_duration
+  - f.title :products
+  
+
