implements sale orders and purchase orders tracking
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1348 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/_price_form.html.haml
+++ b/app/views/management/_price_form.html.haml
@@ -3,7 +3,7 @@
   - f.error 'price_tax'
   - f.title :general
   - f.field :price, :product_id, :choices=>@products.collect{|x| [x.name, x.id]}, :new=>{:action=>:product_create} 
-  - if @mode != :sales
+  - if @mode != :sale_orders
     -f.field :price, :entity_id, :choices=>:entities
   - f.field :price, :amount
   - f.field :price, :category_id, :choices=>@current_company.entity_categories.find_all_by_deleted(false).collect{|x| [x.name, x.id]}
