--- a/app/views/management/purchase_order_lines.html.haml
+++ b/app/views/management/purchase_order_lines.html.haml
@@ -34,4 +34,4 @@
   .actions
     =link_to tg(:previous), :action=>:purchase_orders
     - if @purchase_order.shipped == false
-      =#submit_tag(tc('validate'), :action=>:purchase_order_lines) if @purchase_order.lines.size>0
+      =submit_tag(tc('validate'), :action=>:purchase_order_lines) if @purchase_order.lines.size>0
