--- a/app/views/management/_purchase_order_line_form.html.haml
+++ b/app/views/management/_purchase_order_line_form.html.haml
@@ -10,7 +10,7 @@
     -f.field :price, :tax_id ,:choices=>Tax.find(:all, :conditions=>{:company_id=>@current_company.id},:order=>:id).collect{|x| [x.name, x.id]}
   -if @current_company.stock_locations.size > 1
     -f.field :purchase_order_line, :location_id, :choices=>@current_company.stock_locations.collect{|x| [x.name, x.id]}
+  -f.field :purchase_order_line, :tracking_id
 =#javascript_tag("function update_price(value) {new Ajax.Request('/management/find_price', {asynchronous:true, evalScripts:true, parameters:'product_id=' + encodeURIComponent(value), onSuccess: function(resp) {$('purchase_order_line_amount').update(resp.responseText); $('infos_tax').update(resp.responseText); }  }); }; /*update_price($('purchase_order_line_product_id').value); */")
 -if @update != true
-  =#observe_field "purchase_order_line_product_id", :url=>{:action => :price_find}, :frequency => 0.25, :with=>"purchase_order_line_product_id"
   =observe_field "purchase_order_line_price_id", :url=>{:action => :price_find}, :frequency => 0.25, :with=>"purchase_order_line_price_id"
