--- a/app/views/company/index.html.haml
+++ b/app/views/company/index.html.haml
@@ -5,7 +5,7 @@
   %ul
     =li_link_to tc('nb_entities',:count=>@entities.size), :controller=>:relations, :action=>:entities
     =li_link_to tc('nb_sales', :count=>@deliveries.size), :controller=>:management, :action=>:undelivered_sales
-    =li_link_to tc('nb_purchases', :count=>@purchases.size), :controller=>:management, :action=>:unreceived_purchases
+    =#li_link_to tc('nb_purchases', :count=>@purchases.size), :controller=>:management, :action=>:unreceived_purchases
 
 .menu
   %h2=tc(:modules)
