Add license info
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1350 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/company/index.html.haml
+++ b/app/views/company/index.html.haml
@@ -10,7 +10,5 @@
 .menu
   %h2=tc(:modules)
   %ul
-    -for controller in [:relations, :accountancy, :management, :resources, :production]
+    -for controller in menus[1..-1].collect{|x| x[:name]}
       =li_link_to tc(controller), :controller=>controller, :action=>:index
-
-=h Unit.normalize("kg.m3.s-1 s").inspect
