--- a/app/views/production/_production_form.html.haml
+++ b/app/views/production/_production_form.html.haml
@@ -1,12 +1,13 @@
 =formalize do |f|
   - f.error :production
   - f.title :infos
-  - if !request.url.include? "update" 
+  - if @production.new_record?
     - f.field :production, :product_id, :choices=>@productable_products.collect{|x| [x.informations.to_s, x.id]}, :new=>{:controller=>:management, :action=>:product_create}
   - f.field :production, :quantity
+  - f.field :production, :shape_id, :choices=>@current_company.shapes.collect{|x| [x.name, x.id]}
   - if @current_company.stock_locations.size > 1
     - f.field :production, :location_id, :choices=>@current_company.stock_locations.collect{|x| [x.name, x.id]}, :new=>{:controller=>:management, :action=>:stock_location_create}
 
-- if !request.url.include? "update" 
+- if @production.new_record?
   %p= tc('production_legend_one')
   %p= tc('production_legend_two')
