--- a/app/views/production/_production_form.html.haml
+++ b/app/views/production/_production_form.html.haml
@@ -2,12 +2,10 @@
   - f.error :production
   - f.title :infos
   - if @production.new_record?
-    - f.field :production, :product_id, :choices=>@productable_products.collect{|x| [x.informations.to_s, x.id]}, :new=>{:controller=>:management, :action=>:product_create}
+    - f.field :production, :product_id, :choices=>@current_company.productable_products.collect{|x| [x.informations.to_s, x.id]}, :new=>{:controller=>:management, :action=>:product_create}
   - f.field :production, :quantity
   - f.field :production, :shape_id, :choices=>@current_company.shapes.collect{|x| [x.name, x.id]}
   - if @current_company.stock_locations.size > 1
     - f.field :production, :location_id, :choices=>@current_company.stock_locations.collect{|x| [x.name, x.id]}, :new=>{:controller=>:management, :action=>:stock_location_create}
+  - f.field :production, :tracking_serial
 
-- if @production.new_record?
-  %p= tc('production_legend_one')
-  %p= tc('production_legend_two')
