--- a/app/views/management/shelf.html.haml
+++ b/app/views/management/shelf.html.haml
@@ -1,6 +1,5 @@
 = toolbar do
   - link :shelf_update, :id=>@shelf.id
-  - link :shelves
 
 =evalue @shelf, :name
 =evalue @shelf, :parent, :url=>{:action=>:shelf}
@@ -8,3 +7,5 @@
 =evalue @shelf, :catalog_name
 =evalue @shelf, :catalog_description
 
+%h2=tc(:products)
+=dyta :shelf_products
