--- a/app/views/management/statistics.html.haml
+++ b/app/views/management/statistics.html.haml
@@ -1,6 +1,7 @@
 =tabbox(:entit) do |tb|
-  -tb.tab(tc(:graph_statistics)) do |c|
-    -c << render(:partial=>"graph_statistics")
+  -if defined?(Gruff)
+    -tb.tab(tc(:graph_statistics)) do |c|
+      -c << render(:partial=>"graph_statistics")
   -tb.tab(tc(:csv_statistics)) do |c|
     -c << render(:partial=>"csv_statistics")
    
