Add some CSS stuff
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1382 67a09383-3dfa-4221-8551-890bac9c277c

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,4 +1,4 @@
-* {margin:0; padding:0; font-family: sans-serif;}
+* {margin:0; padding:0; font-family: helvetica, sans-serif;}
 /* BLUE EKYLIBRE : #3060FF */
 html {background: #FFF;}
 fieldset { border:1px solid #DDD; padding: 4px; margin: 1px 1px 4px; }
