--- a/app/views/management/_purchase_order_line_form.html.haml
+++ b/app/views/management/_purchase_order_line_form.html.haml
@@ -1,12 +1,13 @@
 =formalize do |f|
   -f.error :purchase_order_line
   -# f.field :purchase_order_line, :price_id, :choices=>@current_company.prices.find(:all, :conditions=>{:entity_id=>@purchase_order_line.order.supplier_id, :default=>true}).collect{|x| [x.product.name+" "+x.amount.to_s+" "+x.currency.code, x.id]},:options=>{:include_blank=>true}, :new=>{:action=>:price_create,:mode=>:purchase_orders, :entity_id=>@purchase_order_line.order.supplier_id}
-  -f.field :purchase_order_line, :product_id, :choices=>@current_company.available_products(:conditions=>{:to_purchase=>true}).collect{|x| [x.name, x.id]}, :options=>{:include_blank=>true}
+  -f.field :purchase_order_line, :product_id, :choices=>@current_company.available_products.collect{|x| [x.name, x.id]}, :options=>{:include_blank=>true}
   -f.field :purchase_order_line, :quantity
-  -f.field :price, :amount 
-  -f.field :price, :tax_id ,:choices=>Tax.find(:all, :conditions=>{:company_id=>@current_company.id},:order=>:id).collect{|x| [x.name, x.id]}
-  -if @current_company.stock_locations.size > 1
-    -f.field :purchase_order_line, :location_id, :choices=>@current_company.stock_locations.collect{|x| [x.name, x.id]}
+  -if @price
+    -f.field :price, :amount 
+    -f.field :price, :tax_id ,:choices=>Tax.find(:all, :conditions=>{:company_id=>@current_company.id},:order=>:id).collect{|x| [x.name, x.id]}
+  -if @current_company.locations.size > 1
+    -f.field :purchase_order_line, :location_id, :choices=>@current_company.locations.collect{|x| [x.name, x.id]}
   -f.field :purchase_order_line, :tracking_serial
 
 =observe_field "purchase_order_line_product_id", :url=>{:action => :price_find, :entity_id=>@purchase_order_line.order.supplier_id}, :frequency => 0.25, :with=>"purchase_order_line_product_id"
