--- a/app/views/management/_sale_order_line_form.html.haml
+++ b/app/views/management/_sale_order_line_form.html.haml
@@ -9,7 +9,7 @@
 #stocks=#render :partial=>"sale_order_line_stocks"
 
 =formalize do |f|
-  - f.field :sale_order_line, :location_id, :choices=>@stock_locations.collect{|x| [x.name, x.id]} if @stock_locations.size > 1
+  - f.field :sale_order_line, :location_id, :choices=>@locations.collect{|x| [x.name, x.id]} if @locations.size > 1
   - f.field :sale_order_line, :quantity
   - f.field :sale_order_line, :annotation, :field=>:textarea
 #tracking=render :partial=>"sale_order_line_tracking"
@@ -31,5 +31,5 @@
   
  
 =observe_field("sale_order_line_price_id", :url=>{:action => :sale_order_line_tracking}, :frequency => 0.25, :with=>"sale_order_line_price_id")
--if @current_company.stock_locations.size > 1
+-if @current_company.locations.size > 1
   =observe_field("sale_order_line_location_id", :url=>{:action => :sale_order_line_tracking}, :frequency => 0.25, :with=>"sale_order_line_location_id")
