--- a/app/views/management/_stock_move_form.html.haml
+++ b/app/views/management/_stock_move_form.html.haml
@@ -6,7 +6,7 @@
   - f.title :nature
   - f.field :stock_move, :virtual
   - f.field :stock_move, :input
-  - f.field :stock_move, :location_id, :choices=>@current_company.stock_locations.find(:all, :order=>:name).collect{|x| [x.name, x.id]}
+  - f.field :stock_move, :location_id, :choices=>@current_company.locations.find(:all, :order=>:name).collect{|x| [x.name, x.id]}
   - f.field :stock_move, :planned_on
   - f.field :stock_move, :moved_on
   - f.field :stock_move, :product_id, :choices=>@current_company.products.find(:all, :order=>:name).collect{|x| [tc('product', :product=>x.name, :unit=>x.unit.label), x.id]}, :new=>{:action=>:product_create}
