--- a/app/views/management/product.html.haml
+++ b/app/views/management/product.html.haml
@@ -1,6 +1,5 @@
 =toolbar do
   -link :product_update, :id=>@product.id
-  -link :products
 
 %table
   %tr
@@ -25,6 +24,7 @@
       =evalue @product, :manage_stocks
 
 =tabbox(:product) do |tb|
-  -tb.tab :stocks, :content=>dyta(:product_stocks)
   -tb.tab :prices
   -tb.tab :components 
+  -tb.tab :stocks, :content=>dyta(:product_stocks)
+  -tb.tab :stock_moves, :content=>dyta(:product_stock_moves)
