--- a/app/views/production/_production_form.html.haml
+++ b/app/views/production/_production_form.html.haml
@@ -5,7 +5,7 @@
     - f.field :production, :product_id, :choices=>@current_company.productable_products.collect{|x| [x.informations.to_s, x.id]}, :new=>{:controller=>:management, :action=>:product_create}
   - f.field :production, :quantity
   - f.field :production, :shape_id, :choices=>@current_company.shapes.collect{|x| [x.name, x.id]}
-  - if @current_company.stock_locations.size > 1
-    - f.field :production, :location_id, :choices=>@current_company.stock_locations.collect{|x| [x.name, x.id]}, :new=>{:controller=>:management, :action=>:stock_location_create}
+  - if @current_company.locations.size > 1
+    - f.field :production, :location_id, :choices=>@current_company.locations.collect{|x| [x.name, x.id]}, :new=>{:controller=>:management, :action=>:location_create}
   - f.field :production, :tracking_serial
 
