Add better sequence insertion, add unit support
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1390 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/production/_operation_form.html.haml
+++ b/app/views/production/_operation_form.html.haml
@@ -29,11 +29,14 @@
     -for line in (params[:lines] ? params[:lines].values : @operation.lines)
       =render :partial=>'operation_line_row_form', :object=>line
   
-  
-
-= formalize do |f|
-  - tools = @current_company.tools
-  - if tools.size > 0 
-    - f.title :tools
-    - tools.each do |tool|
-      - f.field content_tag(:label, tool.name, :for=>"tools_#{tool.id}"), check_box_tag("tools[#{tool.id}]" ,"1", @operation.new_record? ? false : (session[:tool_ids].include?(tool.id.to_s)), :id=>"tools_#{tools.id}")
+- if @current_company.tools.size > 0 
+  %table.flex
+    %tr
+      -for nature in ["tractor", "towed", "other"]
+        -tools = @current_company.tools.find_all_by_nature(nature)
+        -if tools.size>0
+          %td
+            =formalize do |f|
+              - f.title :tools
+              - tools.each do |tool|
+                - f.field content_tag(:label, tool.name, :for=>"tools_#{tool.id}"), check_box_tag("tools[#{tool.id}]" ,"1", @operation.new_record? ? false : (session[:tool_ids].include?(tool.id.to_s)), :id=>"tools_#{tools.id}")
