--- a/app/views/management/_stock_transfer_form.html.haml
+++ b/app/views/management/_stock_transfer_form.html.haml
@@ -1,29 +1,17 @@
 =formalize do |f|
   - f.error :stock_transfer 
-=formalize(:id=>:transfer_choices) do |f|
-  - f.field :stock_transfer, :nature, :choices=>StockTransfer.natures, :field=>:radio
-=formalize do |f|
+  -if @stock_transfer.new_record?
+    - f.field :stock_transfer, :nature, :choices=>StockTransfer.natures, :field=>:radio
   - f.field :stock_transfer, :product_id, :choices=>@current_company.available_products.collect{|x| [x.name, x.id]}
-  - f.field :stock_transfer, :location_id, :choices=>@current_company.locations.collect{|x| [x.name, x.id]}
   - f.field :stock_transfer, :quantity
-=formalize(:id=>:transfer) do |f|
-  - f.field :stock_transfer, :second_location_id, :choices=>@current_company.locations.collect{|x| [x.name, x.id]}
-=formalize do |f|
+  - f.field :stock_transfer, :location_id, :choices=>@current_company.locations.collect{|x| [x.name, x.id]}
+  -if @stock_transfer.new_record? or @stock_transfer.nature == "transfer"
+    - f.field :stock_transfer, :second_location_id, :choices=>@current_company.locations.collect{|x| [x.name, x.id]}, :html_options=>{:id=>:transfer}
   - f.field :stock_transfer, :planned_on
   - f.field :stock_transfer, :comment, :field=>:textarea
 
-:javascript
-  function transfer_type(){
-    if($('stock_transfer_nature_transfer').checked) 
-      $('transfer').show();
-    else 
-      $('transfer').hide(); 
-  }
-  transfer_type();
-
-- if request.url.include? "update"
+-if @stock_transfer.new_record?
   :javascript
-    $('transfer_choices').hide();
-  
-
-=observe_field "stock_transfer_nature_transfer", :function=>"transfer_type();", :frequency=>0.25
+    function transfer_type(){if($('stock_transfer_nature_transfer').checked) {$('transfer').show();} else {$('transfer').hide();}};
+    transfer_type();  
+  =observe_field "stock_transfer_nature_transfer", :function=>"transfer_type();", :frequency=>0.25
