--- a/app/views/management/subscriptions.html.haml
+++ b/app/views/management/subscriptions.html.haml
@@ -1,5 +1,5 @@
 .search 
-  -# form_tag do
+  -form_tag do
     %table
       %tr
         %td.label=tc("subscription_nature")
@@ -7,33 +7,8 @@
         %td#subscription_options=render :partial=>"subscription_options"
         %td=submit_tag tg("search_go")
 
-=#dyta :subscriptions
+=dyta :subscriptions
 
--form_tag do
-  %table
-    %tr
-      %td.label=tc("subscription_nature")
-      %td.input=select_tag(:nature, options_for_select(@current_company.subscription_natures.collect{|x| [x.name, x.id]}, :selected=>session[:subscriptions][:nature]['id']) )
-      %td#subscription_options=render :partial=>"subscription_options"
-      %td=submit_tag tg("search_go")
-
-  %table.dyta
-    %tr
-      %th "pdt"
-      -for interval in session[:numbers]
-        %th=interval.to_s
-    -for product in @subscription_nature.products
-      %tr
-        %td=product.name
-        -for interval in session[:numbers]
-          -subscriptions = product.subscriptions.find(:all, :conditions=>['? BETWEEN first_number AND last_number', interval.to_i])
-          %td
-            .info=subscriptions.size.to_s
-            .info=subscriptions.size.to_s
-            .info=subscriptions.size.to_s
-            .info=subscriptions.size.to_s
-            .info=subscriptions.size.to_s
-
-=observe_field("nature", :url=>{:action=>:subscription_options}, :update=>:subscription_options, :frequency => 0.25, :with=>"nature", :loading=>"onLoading()", :loaded=>"onLoaded()")
+=observe_field("subscription_nature", :url=>{:action=>:subscription_options}, :update=>:subscription_options, :frequency => 0.25, :with=>"nature", :loading=>"onLoading()", :loaded=>"onLoaded()")
 
 
