--- a/app/views/management/_price_form.html.haml
+++ b/app/views/management/_price_form.html.haml
@@ -3,21 +3,16 @@
   - f.error 'price_tax'
   - f.title :general
   - f.field :price, :product_id, :choices=>@products.collect{|x| [x.name, x.id]}, :new=>{:action=>:product_create} 
-  - if @mode != :sale_orders
+  - if @mode != :sales
     -f.field :price, :entity_id, :choices=>:entities
   - f.field :price, :amount
+  - f.field :price, :tax_id, :choices=>@price.all_taxes(@current_company, :order=>"taxes.amount").collect{|x| [x.name, x.id]}
   - f.field :price, :category_id, :choices=>@current_company.entity_categories.find_all_by_deleted(false).collect{|x| [x.name, x.id]}
   - f.field :price, :default
   - f.field :price, :currency_id, :choices=>Currency.find(:all, :conditions=>{:company_id=>@current_company.id}).collect{|x| [x.name, x.id]}
   - f.field :price, :use_range
   - f.field :price, :quantity_min, :html_options=>{:id=>:price_qmin}
   - f.field :price, :quantity_max, :html_options=>{:id=>:price_qmax}
-  - f.title :taxes
-  - f.field :price, :tax_id, :choices=>@price.all_taxes(@current_company, :order=>"taxes.amount").collect{|x| [x.name, x.id]}
-/  - #taxes = @price.all_taxes(@current_company, :order=>"taxes.amount")
-/  - #unless taxes.empty?
-/    - #for tax in taxes
-/      - #f.field tax.name, check_box_tag("price_tax_#{tax.id.to_s}",1,@price[:used],:name=>"price_tax[#{tax.id.to_s}]")
 
 =javascript_tag("function display_quantities(element) { var qmin=$('price_qmin'); var qmax=$('price_qmax');  if (element.checked) { qmin.show(); qmax.show(); } else { qmin.hide(); qmax.hide(); }; return false; }\ndisplay_quantities($('price_use_range'));")
 =observe_field("price_use_range", :frequency =>0.25, :function => "display_quantities(element);")
