--- a/app/views/company/listing_update.html.haml
+++ b/app/views/company/listing_update.html.haml
@@ -33,4 +33,4 @@
 .actions 
   =link_to tg(:previous), :action=>:listings
 
-%p{:style=>'color: #808080;'}=tc(:query)+" "+@listing.query.to_s
+-#%p{:style=>'color: #808080;'}=tc(:query)+" "+@listing.query.to_s
