--- a/app/views/company/_listing_node_position.html.haml
+++ b/app/views/company/_listing_node_position.html.haml
@@ -1,5 +1,6 @@
 -listing_node = listing_node_position
--form_remote_tag(:url=>{:action=>:listing_node_update, :id=>listing_node.id, :type=>"position"}, :update=>"#{listing_node.key}_position") do
-  %span{:onclick=>"this.hide(); $('#{listing_node.key}_position_tf').show();  $('#{listing_node.key}_validate_position').show(); "}=listing_node.position
-  =text_field_tag("position", listing_node.position, :size=>10, :id=>listing_node.key+"_position_tf", :style=>'display: none;')
+-form_remote_tag(:url=>{:action=>:listing_node_update, :id=>listing_node.id, :type=>"position"}, :update=>"#{listing_node.key}_position", :loading=>"onLoading()", :loaded=>"onLoaded();") do
+  -#%span{:onclick=>"this.hide(); $('#{listing_node.key}_position_tf').show();  $('#{listing_node.key}_validate_position').show(); "}=listing_node.position
+  %span{:id=>"#{listing_node.key}_position_lb", :onclick=>"this.hide(); var tf = $('#{listing_node.key}_position_tf'); tf.show(); tf.select(); tf.focus();"}=listing_node.position
+  =text_field_tag("position", listing_node.position, :size=>4, :id=>listing_node.key+"_position_tf", :style=>"display: none;", :onblur=>"$('#{listing_node.key}_position_lb').show(); this.hide();")
   %span{:style=>'display: none;', :id=>listing_node.key+"_validate_position"}=submit_tag(tg(:validate))
