--- a/app/views/company/_listing_reflection.html.haml
+++ b/app/views/company/_listing_reflection.html.haml
@@ -4,5 +4,5 @@
   .icon
   .item
     -form_remote_tag(:url=>{:action=>:listing_node_create, :parent_id=>listing_reflection.id}, :update=>listing_reflection.key, :loading=>"onLoading();", :loaded=>"onLoaded();", :class=>:content) do
-      =select_tag(:nature, options_for_select(listing_reflection.available_nodes.collect{|x| [x[0],x[1]]}))
+      =select_tag(:nature, grouped_options_for_select(listing_reflection.available_nodes))
       =submit_tag(tg(:add))
