Upgrade and unify notification support
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1416 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -23,11 +23,10 @@
             =side_link_tag
             %h1.title=title
           #yield{:flex=>50, :orient=>:vertical}
-            = flash_tag :error
-            = flash_tag :warning
-            = flash_tag :notice
-            - unless flash[:message].blank?
-              .message=flash[:message]
+            =notification_tag :error
+            =notification_tag :warning
+            =notification_tag :success
+            =notification_tag :information
             =yield
             .end{:style=>'height:1px'}
       #help{:flex=>3, :style=>(session[:help] ? "" : "display:none; ")+"position: absolute; top: 0px;"}
